Complete Audio Processing ...

--- a/CompleteAudioProcessing.ipynb
+++ b/CompleteAudioProcessing.ipynb
@@ -6,23 +6,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pydub import AudioSegment\n",
-    "from pydub.playback import play\n",
+    "# from pydub import AudioSegment\n",
+    "# from pydub.playback import play\n",
     "\n",
-    "# read in audio file and get the two mono tracks\n",
-    "myAudioFile = 'yrkkh_2.mp4'\n",
-    "sound_stereo = AudioSegment.from_file(myAudioFile, format=\"mp4\")\n",
-    "sound_monoL = sound_stereo.split_to_mono()[0]\n",
-    "sound_monoR = sound_stereo.split_to_mono()[1]\n",
+    "# # read in audio file and get the two mono tracks\n",
+    "# myAudioFile = 'yrkkh_2.mp4'\n",
+    "# sound_stereo = AudioSegment.from_file(myAudioFile, format=\"mp4\")\n",
+    "# sound_monoL = sound_stereo.split_to_mono()[0]\n",
+    "# sound_monoR = sound_stereo.split_to_mono()[1]\n",
     "\n",
-    "# Invert phase of the Right audio file\n",
-    "sound_monoR_inv = sound_monoR.invert_phase()\n",
+    "# # Invert phase of the Right audio file\n",
+    "# sound_monoR_inv = sound_monoR.invert_phase()\n",
     "\n",
-    "# Merge two L and R_inv files, this cancels out the centers\n",
-    "sound_CentersOut = sound_monoL.overlay(sound_monoR_inv)\n",
+    "# # Merge two L and R_inv files, this cancels out the centers\n",
+    "# sound_CentersOut = sound_monoL.overlay(sound_monoR_inv)\n",
     "\n",
-    "# Export merged audio file\n",
-    "fh = sound_CentersOut.export('out2.mp3', format=\"mp3\")"
+    "# # Export merged audio file\n",
+    "# fh = sound_CentersOut.export('out2.mp3', format=\"mp3\")"
    ]
   },
   {
@@ -88,8 +88,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "videos_folder = 'videos/'\n",
-    "bgm_folder = 'bgm/'\n",
+    "videos_folder = 'videos/' \n",
+    "bgm_folder = 'bgm/' \n",
     "img_dir ='gen_bgm_img/'\n",
     "\n",
     "mkdir_ifnot(videos_folder)\n",
@@ -116,9 +116,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 16%|█▌        | 5/32 [01:09<06:20, 14.08s/it]"
+     ]
+    }
+   ],
    "source": [
-    "# process_videos(videos_folder)"
+    "process_videos(videos_folder)"
    ]
   },
   {
@@ -130,14 +138,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "start,end = -0.0000001, 0.0000001"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def produce_chunks(audio,sr):\n",
+    "    \n",
+    "    checkpoints = [0] \n",
+    "    \n",
+    "    checkpoint_flag = 0          # 0 means off \n",
+    "    \n",
+    "    for idx,amp in enumerate(audio):\n",
+    "        \n",
+    "        if amp>start and amp<end and checkpoint_flag == 0:\n",
+    "            checkpoint_flag = 1\n",
+    "            checkpoints.append(idx/sr)\n",
+    "        \n",
+    "        elif amp>start and amp<end and checkpoint_flag == 1:\n",
+    "            checkpoint_flag = 1\n",
+    "        \n",
+    "        elif ( amp<start or amp>end ) and checkpoint_flag == 1:\n",
+    "            checkpoint_flag = 0\n",
+    "            checkpoints.append(idx/sr)\n",
+    "\n",
+    "        \n",
+    "#     return checkpoints\n",
+    "#     print(checkpoints)\n",
+    "    \n",
+    "    \n",
+    "    ## Making tuples for storing chunks\n",
+    "    prev = 0\n",
+    "    chunks = []\n",
+    "    for checkpoint in checkpoints:\n",
+    "        if not checkpoint - prev > 4: continue\n",
+    "        chunks.append((prev,checkpoint))\n",
+    "        prev = checkpoint\n",
+    "    \n",
+    "    return checkpoints,chunks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,13 +229,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pylab\n",
     "\n",
-    "def save_images(S_full,sr,strtend_list,filesavename='test'):\n",
+    "def save_images(S_full,y,sr,strtend_list,filesavename='test'):\n",
     "    \n",
     "    print(\"SAVE IMAGES is called\")\n",
     "    pylab.axis('off') # no axis\n",
@@ -200,21 +251,22 @@
     "        librosa.display.specshow(librosa.amplitude_to_db(S_full[:, idx], ref=np.max),\n",
     "                                 y_axis='log', x_axis='time', sr=sr)\n",
     "        \n",
-    "        filnamenow = \"{}to{}.jpg\".format(filesavename,start,end)\n",
+    "        filnamenow = \"{}to{}.jpg\".format(start,end)\n",
     "        \n",
-    "        filnamefldr = Path(\"{}/{}\".format(img_dir,os.path.basename(filnamenow)))\n",
+    "        filnamefldr = Path(\"{}/{}\".format(str(img_dir),str(filesavename)))\n",
     "        \n",
     "        if not filnamefldr.exists():\n",
     "            filnamefldr.mkdir()          # Storing every image with its own name\n",
     "        \n",
     "        pylab.savefig(filnamefldr/filnamenow, bbox_inches=None, pad_inches=0)\n",
+    "        librosa.output.write_wav('{}/file_trim_{}to{}.wav'.format(str(filnamefldr),start,end), y[start*sr:end*sr], sr)\n",
     "            \n",
     "    pylab.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,15 +278,15 @@
     "    os.chdir(\"..\")\n",
     "    # And compute the spectrogram magnitude and phase\n",
     "    S_full, phase = librosa.magphase(librosa.stft(y))\n",
-    "    _,audio_chunks = make_chunks(y,sr)\n",
+    "    _,audio_chunks = produce_chunks(y,sr)\n",
     "    print(\"Save images start save\")\n",
-    "    save_images(S_full,sr,audio_chunks,\"{}\".format(mp3_file.split(\".\")[:-1]))\n",
+    "    save_images(S_full,y,sr,audio_chunks,\"{}\".format(mp3_file.split(\".\")[:-1]))\n",
     "    return audio_chunks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -257,14 +309,24 @@
      "output_type": "stream",
      "text": [
       "\r",
-      "  0%|          | 0/7 [00:00<?, ?it/s]"
+      "  0%|          | 0/1 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AUDIO chunks start load\n"
+      "AUDIO chunks start load\n",
+      "AUDIO chunks stop load\n",
+      "Save images start save\n",
+      "SAVE IMAGES is called\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [31:29<00:00, 1889.37s/it]\n"
      ]
     }
    ],
