Updated. Few delete statements here & there

--- a/CompleteAudioProcessing.ipynb
+++ b/CompleteAudioProcessing.ipynb
@@ -42,8 +42,7 @@
     "\n",
     "import librosa\n",
     "import librosa.display\n",
-    "from pathlib import Path\n",
-    "from tqdm import tqdm"
+    "from pathlib import Path"
    ]
   },
   {
@@ -104,7 +103,7 @@
    "outputs": [],
    "source": [
     "def process_videos(videos_folder):\n",
-    "    for vid in tqdm(glob.glob(\"{}*.mp4\".format(videos_folder))):\n",
+    "    for vid in tqdm_notebook(glob.glob(\"{}*.mp4\".format(videos_folder))):\n",
     "        vid = os.path.basename(vid)\n",
     "        try:\n",
     "            extract_music_bgm(vid)\n",
@@ -114,19 +113,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 16%|█▌        | 5/32 [01:09<06:20, 14.08s/it]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "process_videos(videos_folder)"
+    "# process_videos(videos_folder)"
    ]
   },
   {
@@ -138,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,12 +174,14 @@
     "        chunks.append((prev,checkpoint))\n",
     "        prev = checkpoint\n",
     "    \n",
-    "    return checkpoints,chunks"
+    "    del checkpoints  # Saving space. Not needed\n",
+    "    \n",
+    "    return chunks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,12 +217,14 @@
     "        chunks.append((prev,checkpoint))\n",
     "        prev = checkpoint\n",
     "    \n",
-    "    return checkpoints,chunks"
+    "    del checkpoints # Saving space, not needed.\n",
+    "    \n",
+    "    return chunks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,56 +232,75 @@
     "\n",
     "def save_images(S_full,y,sr,strtend_list,filesavename='test'):\n",
     "    \n",
-    "    print(\"SAVE IMAGES is called\")\n",
-    "    pylab.axis('off') # no axis\n",
     "\n",
+    "    pylab.axis('off') # no axis\n",
     "    pylab.axes([0., 0., 1., 1.], frameon=False, xticks=[], yticks=[]) # Remove the white edge\n",
     "\n",
     "    \n",
-    "    for indx,(start,end) in enumerate(strtend_list):\n",
-    "#         print(start,end)\n",
+    "    for indx,(start,end) in tqdm_notebook(enumerate(strtend_list),desc='Creating files',total=len(strtend_list)):\n",
     "        start=int(start)\n",
     "        end = int(end)\n",
     "        idx = slice(*librosa.time_to_frames([start, end], sr=sr))\n",
     "        librosa.display.specshow(librosa.amplitude_to_db(S_full[:, idx], ref=np.max),\n",
     "                                 y_axis='log', x_axis='time', sr=sr)\n",
-    "        \n",
     "        filnamenow = \"{}to{}.jpg\".format(start,end)\n",
+    "        filnamefldr = \"{}/{}\".format(str(img_dir),str(filesavename))\n",
     "        \n",
-    "        filnamefldr = Path(\"{}/{}\".format(str(img_dir),str(filesavename)))\n",
-    "        \n",
-    "        if not filnamefldr.exists():\n",
-    "            filnamefldr.mkdir()          # Storing every image with its own name\n",
-    "        \n",
-    "        pylab.savefig(filnamefldr/filnamenow, bbox_inches=None, pad_inches=0)\n",
-    "        librosa.output.write_wav('{}/file_trim_{}to{}.wav'.format(str(filnamefldr),start,end), y[start*sr:end*sr], sr)\n",
+    "        if not os.path.exists(filnamefldr):          # Storing every image with its own name\n",
+    "            mkdir_ifnot(filnamefldr)\n",
+    "            \n",
+    "        pylab.savefig(\"{}/{}\".format(filnamefldr,filnamenow), bbox_inches=None, pad_inches=0)\n",
+    "        librosa.output.write_wav('{}/file_trim_{}to{}.wav'.format(filnamefldr,start,end), y[start*sr:end*sr], sr)\n",
     "            \n",
     "    pylab.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_aud_chunks_images(mp3_file):\n",
-    "    os.chdir(bgm_folder)\n",
-    "    print(\"AUDIO chunks start load\")\n",
-    "    y, sr = librosa.load('{}'.format(mp3_file), duration=None)\n",
-    "    print(\"AUDIO chunks stop load\")\n",
-    "    os.chdir(\"..\")\n",
-    "    # And compute the spectrogram magnitude and phase\n",
-    "    S_full, phase = librosa.magphase(librosa.stft(y))\n",
-    "    _,audio_chunks = produce_chunks(y,sr)\n",
-    "    print(\"Save images start save\")\n",
-    "    save_images(S_full,y,sr,audio_chunks,\"{}\".format(mp3_file.split(\".\")[:-1]))\n",
-    "    return audio_chunks"
+    "??librosa.output.write_wav"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_aud_chunks_images(mp3_file):\n",
+    "    \n",
+    "    os.chdir(bgm_folder)\n",
+    "    print(\"Chunking ...\")\n",
+    "    y, sr = librosa.load('{}'.format(mp3_file), duration=None)\n",
+    "    os.chdir(\"..\")\n",
+    "    \n",
+    "    print(\"Producing chunks ...\")\n",
+    "    # And compute the spectrogram magnitude and phase\n",
+    "    S_full, phase = librosa.magphase(librosa.stft(y))\n",
+    "    audio_chunks = produce_chunks(y,sr)\n",
+    "        \n",
+    "    \n",
+    "    save_images(S_full,y,sr,audio_chunks,\"{}\".format(mp3_file.split(\".\")[:-1]))\n",
+    "    del audio_chunks  # Saving space.\n",
+    "    \n",
+    "#     return audio_chunks # No need to return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -309,24 +323,59 @@
      "output_type": "stream",
      "text": [
       "\r",
-      "  0%|          | 0/1 [00:00<?, ?it/s]"
+      "  0%|          | 0/31 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AUDIO chunks start load\n",
-      "AUDIO chunks stop load\n",
-      "Save images start save\n",
-      "SAVE IMAGES is called\n"
+      "Chunking ...\n",
+      "Producing chunks ...\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6b2e5ed3bd184a178532f139f226bebf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Creating files', max=78, style=ProgressStyle(description_widt…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [31:29<00:00, 1889.37s/it]\n"
+      "\r",
+      "  3%|▎         | 1/31 [02:35<1:17:45, 155.52s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chunking ...\n",
+      "Producing chunks ...\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-2530fee2ad2f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprocess_bgms\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbgm_folder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-13-db1788ab816c>\u001b[0m in \u001b[0;36mprocess_bgms\u001b[0;34m(bgm_folder)\u001b[0m\n\u001b[1;32m      3\u001b[0m         \u001b[0mvid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbasename\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m             \u001b[0mmake_aud_chunks_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"error is \"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mvid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-11-2b2da6e989ec>\u001b[0m in \u001b[0;36mmake_aud_chunks_images\u001b[0;34m(mp3_file)\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;31m# And compute the spectrogram magnitude and phase\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mS_full\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mphase\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlibrosa\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmagphase\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlibrosa\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstft\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0maudio_chunks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mproduce_chunks\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-8-0849a3963ed7>\u001b[0m in \u001b[0;36mproduce_chunks\u001b[0;34m(audio, sr)\u001b[0m\n\u001b[1;32m     14\u001b[0m             \u001b[0mcheckpoint_flag\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m         \u001b[0;32melif\u001b[0m \u001b[0;34m(\u001b[0m \u001b[0mamp\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0mstart\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mamp\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0mend\u001b[0m \u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mcheckpoint_flag\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m             \u001b[0mcheckpoint_flag\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m             \u001b[0mcheckpoints\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0msr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -366,6 +415,42 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "position": {
+    "height": "284.85px",
+    "left": "1475px",
+    "right": "20px",
+    "top": "437px",
+    "width": "351px"
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
